@@ -1,34 +1,34 @@
 // ==UserScript==
-// @name Fimfiction Emote Extender: Cheerilee Module
+// @name FIMFiction Emote Extender: Cheerilee Module
 // @namespace ffemoteextender
 // @description Adds additional emotes to fimfiction.net.
 // @include http*://www.fimfiction.net/*
 // @include http*://fimfiction.net/*
 // @grant none
-// @require https://raw.github.com/KrazyTheFox/Fimfiction-Emote-API/master/emoteAPI.js
-// @version 2.0
+// @require https://raw.github.com/KrazyTheFox/FIMFiction-Emote-API/development/emoteAPI.js
+// @version 3.0d
 // ==/UserScript==
 
 $(document).ready(run());
 
 function run() {
 
-    addEmote("http://i.imgur.com/cvM4P.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/IdiNEoG.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/zi55aHB.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/Z9dmrsL.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/etvChCJ.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/4CT6FFE.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/sqalbWn.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/rRAQgvt.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/8uzdXWe.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/PsTsg73.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/7OlsrI3.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/PC1vZ9r.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/r0hl8Qx.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/um4v4cj.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/4tvC5bF.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/2VCyIBF.png", "Emote", "CHR", "Cheerilee", 1);
-    addEmote("http://i.imgur.com/Ot8C5aY.png", "Emote", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/cvM4P.png", "cheerilee", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/IdiNEoG.png", "cheeristare", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/zi55aHB.png", "cheerannoyed", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/Z9dmrsL.png", "cheerihmm", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/etvChCJ.png", "cheerihurry", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/4CT6FFE.png", "cheerikissy", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/sqalbWn.png", "cheeripoker", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/rRAQgvt.png", "cheeriwhat", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/8uzdXWe.png", "cheerigaze", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/PsTsg73.png", "cheerismile", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/7OlsrI3.png", "cheeritated", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/PC1vZ9r.png", "angrilee", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/r0hl8Qx.png", "cheeriously", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/um4v4cj.png", "cheeriwink", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/4tvC5bF.png", "notsocheeri", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/2VCyIBF.png", "crazilee", "CHR", "Cheerilee", 1);
+    addEmote("http://i.imgur.com/Ot8C5aY.png", "cheereww", "CHR", "Cheerilee", 1);
 
 }
