@@ -17,3 +17,4 @@ To Do:
 - Clicking emotes inserts fimfiction style shortcuts instead of [img] links.
 - Emote resizing based on %. Allows use of non-standard emote sizes.
 - Add emotes to preview functionality
+- Pull a few new cheerilee and Twilight emotes from reddit. Check for others that might exist.
